# Panex_Privus

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configs/: privy.yaml  privy_minimal.yaml
docs/: _config.yml  architecture.md  benchmarking.md  commands.md  comparative-pangenome.md  concepts.md  configuration.md  dev-log.md  figures-and-tables.md  index.md  installation.md  outputs.md  quickstart.md  run-guide.md  sapelo2-runs.md  status.md  team-guide.md  testing-guide.md  troubleshooting.md
docs/_layouts/: default.html
docs/archive/: longform-readme.md
docs/dev/: 00a_Top_Notes.txt  00b_notes_forClaude.txt  00c_notes_forClaude.txt  dev_README.md  interactive_dashboards_plan.md
example_scripts/: find_group_private_bam_regions.py  find_group_private_vcf_regions.py  find_group_private_xmfa_regions.py
reports/privy_gm15/: gm15_09f_derived_donor_like_blocks.tsv  gm15_09f_nearest_background_summary.tsv  gm15_09f_pairwise_similarity_summary.tsv  gm15_09f_target_private_windows.tsv  gm15_09f_tool_candidate_introgression_blocks.tsv  gm15_1_2500000.genes.tsv  gm15_1_4000000.genes.tsv  gm15_privy_landscape_report.md  run_summary.tsv
src/privy/: __init__.py  synthetic.py
tests/: __init__.py  conftest.py
tests/data/: small_cohort.gfa  small_cohort.gff3  small_cohort.vcf
tests/integration/: __init__.py  test_annotate.py  test_bam_support.py  test_compare.py  test_dashboard_cli.py  test_end_to_end.py  test_export.py  test_gfa_scan.py  test_interactive_cli.py  test_landscape_cli.py  test_microhap_cli.py  test_pangenome_cli.py  test_plot_cli.py  test_plot_synteny_cli.py  test_popgen_cli.py  test_project_cli.py  test_report.py  test_scan_cli.py  test_synteny_cli.py  test_vcf_scan.py
tests/regression/: __init__.py
tests/unit/: __init__.py  test_bam_io.py  test_cohort.py  test_cohort_args.py  test_compare_engine.py  test_config.py  test_gfa_io.py  test_gff_io.py  test_hvcf_io.py  test_interactive_models.py  test_intervals.py  test_intervals_classes.py  test_landscape.py  (+28 more)
web/: index.html  package-lock.json  package.json  vite.config.mjs
(+172 files in other folders)
